<resources>

    <string name="app_name" translatable="false">AQQHome</string>
    <string name="Hoadon" translatable="false">Hóa đơn</string>
    <string name="Thongbao" translatable="false">Thông báo</string>
    <string name="Bangtin" translatable="false">Bảng tin</string>
    <string name="Caidat" translatable="false">Cài đặt</string>
    <string name="Thongtinphienban" translatable="false">Thông tin phiên bản</string>
    <string name="Thongtin" translatable="false">Thông tin</string>
    <string name="Dangxuat" translatable="false">Đăng xuất</string>
    <string name="Dangnhap" translatable="false">Đăng nhập</string>
    <string name="Dangky" translatable="false">Đăng ký</string>
    <string name="Dangnhapthanhcong" translatable="false">Đăng nhập thành công</string>
    <string name="hintdangnhap" translatable="false">Email hoặc số điện thoại</string>
    <string name="hintmatkhau" translatable="false">Mật khẩu</string>
    <string name="taotaikhoan" translatable="false">Tạo tài khoản</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="HomeFragmentThanhtoan" translatable="false">Thanh toán</string>
    <string name="HomefragmentViAQQPay" translatable="false">Ví AQQPAY</string>
    <string name="HomefragmentPhananh" translatable="false">Phản ánh</string>
    <string name="Homefragmenttienich" translatable="false">Tiện ích\n</string>
    <string name="Homefragmentlienhe" translatable="false">Liên hệ\n</string>
    <string name="Homefragmentshop" translatable="false">Shop\n</string>
    <string name="Homefragmentdatphongks" translatable="false">Đặt phòng\nkhách sạn</string>
    <string name="HomefragmentTiendien" translatable="false">Tiền điện\n</string>
    <string name="Homefragmentnaptiendt" translatable="false">Nạp tiền\nđiện thoại</string>
    <string name="Homefragmenthoadonth" translatable="false">Hóa đơn\ntruyền hình</string>
    <string name="Homefragmentthanhvien" translatable="false">- Thành viên</string>


    <string name="NaviBottomTrangchu" translatable="false">Trang chủ</string>
    <string name="NaviBottomgiaotiep" translatable="false">Giao tiếp</string>
    <string name="NaviBottomthongbao" translatable="false">Thông báo</string>
    <string name="NaviBottomcaidat" translatable="false">Cài đặt</string>
    <string name="FragmentCaidatThanhvien" translatable="false">Thành viên</string>
    <string name="FragmentCaidatThanhvientcch" translatable="false">Thông tin căn hộ</string>
    <string name="FragmentCaidatsotay" translatable="false">Sổ tay cư dân</string>
    <string name="FragmentCaidatthongtintk" translatable="false">Thông tin tài khoản</string>
    <string name="FragmentCaidattdnn" translatable="false">Thay đổi ngôn ngữ</string>
    <string name="FragmentCaidatcauhoi" translatable="false">Câu hỏi thường gặp</string>
    <string name="FragmentCaidatdieukhoan" translatable="false">Các điều khoản và điều kiện</string>
    <string name="FragmentCaidatdangxuat" translatable="false">Đăng xuất</string>
    <string name="FragmentCaidatphienban" translatable="false">Phiên bản 1.0</string>
    <string name="FragmentCaidatthongtincch" translatable="false">Thông tin căn hộ</string>
    <string name="ngonnguactivitytitle" translatable="false">Thay đổi ngôn ngữ</string>
    <string name="ngonnguactivitytiengviet" translatable="false">Tiếng Việt</string>


</resources>
