<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/FragmentCaidatthongtincch"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/title"></View>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toBottomOf="@id/view2"></ImageView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/roboto"
        android:text="+84394309941"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"></TextView>

    <TextView
        android:id="@+id/loai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/FragmentCaidatThanhvien"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

    </TextView>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@+id/loai">

    </View>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/file">

            </ImageView>
        </LinearLayout>

        <TextView

            android:id="@+id/aaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidatThanhvientcch"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/lin1"></View>


    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/book">

            </ImageView>
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidatsotay"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/lin2"></View>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view5">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/resume">

            </ImageView>
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidatthongtintk"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/lin3"></View>

    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view6">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/language">

            </ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidattdnn"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/lin4"></View>

    <LinearLayout
        android:id="@+id/lin5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view7">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/question">

            </ImageView>
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidatcauhoi"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/lin5"></View>

    <LinearLayout
        android:id="@+id/lin6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view8">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/privacy">

            </ImageView>
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidatdieukhoan"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>

    <TextView
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/FragmentCaidatphienban"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin6">

    </TextView>

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/pb">

    </View>

    <LinearLayout
        android:id="@+id/dangxuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view10">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_backgroundd">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/backhome">

            </ImageView>
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/FragmentCaidatdangxuat"

            android:textColor="@color/red">

        </TextView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_arrow_forward_ios_24">

        </ImageView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>